@@ -11,6 +11,10 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-05-36
+2015-08-10 Mikhail S. Dubrovin	
+- NDArrIOV1 - fix migration to RHEL7 problem reported by David in PSAS-171.
+
 Tag: V00-05-35
 2015-07-07 Mikhail S. Dubrovin	
 - NDArrIOV1.h - fix doxygen documentation.
